# rs_osrm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  main.rs  python3-minimal_3.7.5-1_amd64.deb
.github/workflows/: rust.yml
src/: engine_config.rs  general.rs  lib.rs  match_api.rs  nearest.rs  route.rs  table.rs  tile.rs  trip.rs
src/engine_config/: c_engine_config.rs  engine_config_builder.rs  mod.rs
src/general/: general_options.rs  mod.rs  waypoint.rs
src/general/c_structs/: c_annotation.rs  c_approach.rs  c_bearing.rs  c_coordinate.rs  c_general_options.rs  c_intersections.rs  c_lanes.rs  c_maneuver.rs  c_meta_data.rs  c_route.rs  c_route_leg.rs  c_step.rs  c_waypoint.rs  mod.rs
src/general/rs_structs/: annotation.rs  coordinate.rs  general_options.rs  intersections.rs  lanes.rs  maneuver.rs  meta_data.rs  mod.rs  route.rs  route_leg.rs  step.rs  waypoint.rs
src/match_api/: match_request.rs  match_request_builder.rs  match_result.rs  match_route.rs  match_waypoint.rs  mod.rs
src/nearest/: mod.rs  nearest_request.rs  nearest_result.rs
src/nearest_api/: mod.rs  nearest_request.rs  nearest_request_builder.rs  nearest_result.rs  nearest_waypoint.rs
src/route_api/: mod.rs  route_request.rs  route_request_builder.rs  route_result.rs
src/table_api/: mod.rs  table_request.rs  table_request_builder.rs  table_result.rs
src/tile_api/: mod.rs  tile_request.rs  tile_result.rs
src/trip_api/: mod.rs  trip_request.rs  trip_request_builder.rs  trip_result.rs
