[package]
name = "rs_osrm"
version = "1.0.8"
license = "MIT"
authors = ["Ronny Karlsson <mafiapro@live.se>"]
edition = "2018"
description = "rust wrapper for osrm"
repository = "https://github.com/TehGoat/rs_osrm"
keywords = ["osrm"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_osrm"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
cmake = "0.1"