[package]
name = "rsc_osrm"
version = "0.1.5"
license = "MIT"
authors = ["Chang Zhao <zhchang@gmail.com>"]
edition = "2018"
description = "rust wrapper for osrm, folk from TehGoat/rs_osrm"
repository = "https://github.com/zhchang/rs_osrm"
keywords = ["osrm"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsc_osrm"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
cmake = "0.1"
